# Zork

./: .clangd  .gitignore  CMakeLists.txt  README.md
doc/: AssessmentCriteria.md  Plan.md
include/: OutOfBoundsException.h  enemy.h  entity.h  gamestate.h  item.h  player.h  point.h  room.h  settings.h
src/: enemy.cpp  entity.cpp  gamestate.cpp  item.cpp  main.cpp  player.cpp  point.cpp  room.cpp
